--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -845,7 +845,12 @@ main {
   line-height: 1.6;
 }
 
-.skills-title {
+
+/**
+ * skills 
+ */
+
+ .skills-title {
   margin-bottom: 30px;  
 }
 
@@ -857,35 +862,30 @@ main {
   margin-bottom: 15px;
 }
 
-.skill .title-wrapper{
+.skills-item .title-wrapper{
   display: flex;
   align-items: center;
   gap: 5px;
   margin-bottom: 8px;
 }
-.skill .title-wrapper data {
+.skills-item .title-wrapper data {
   color: var(--light-gray);
   font-size: var(--fs-7);
   font-weight: var(--fw-300);
 }
 
-.skills-progress-bg {
+.skill-progress-bg {
   background: var(--jet);
   width: 100%;
   height: 8px;
   border-radius: 10px;
 }
 
-.skills-progress-fill {
+.skill-progress-fill {
   background: var(--text-gradient-yellow);
   height: 100%;
   border-radius: inherit;
 }
-
-/**
- * skills 
- */
-
 
 
 
@@ -896,11 +896,183 @@ main {
   #PORTFOLIO
 \*-----------------------------------*/
 
+.filter-list {
+  display: none;
+}
+
+.filter-select-box {
+  position: relative;
+  margin-bottom: 25px;
+}
+
+.filter-select{
+  background: var(--eerie-black-2);
+  color: var(--light-gray);
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 14px;
+  border: 1px solid var(--jet);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-300); 
+}
+
+.filter-select.active .select-icon{
+  transform: rotate(0.5turn)
+}
+
+.select-list {
+  background: var(--eerie-black-2);
+  position: absolute;
+  top: calc(100% + 6px);
+  width: 100%;
+  padding: 6px;
+  border-radius: 14px;
+  opacity: 0;
+  z-index: 2;
+  visibility: hidden;
+  pointer-events: none;
+  transition: 0.15s ease-in-out;
+}
+
+.filter-select.active+.select-list{
+  opacity:1 ;
+  visibility: visible;
+  position: all;
+
+}
+
+.select-item button{
+  background: var(--eerie-black-2);
+  color: var(--light-gray);
+  font: var(--fs-6);
+  font-weight: var(--fw-300);
+  width: 100%;
+  text-transform: capitalize;
+  padding: 8px 10px;
+  border-radius: 8px;
+}
+
+.select-item button:hover {
+  --eerir-black-2: hsl(240, 2%, 20%);
+}
+
+.project-list{
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 30px;
+  margin-bottom: 10px;
+}
+
+.project-item{
+  display: none;
+}
+
+.project-item.active {
+  display: block;
+  animation: scaleUp 0.25s ease forwards;
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(0.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+  
+}
 
 
+.project-item > a {
+  width: 100%;
+}
 
 
+.project-img {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  border-radius: 16px;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
 
+.project-img::before {
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: 1;
+  transition: var(--transition-1);
+}
+
+.project-item > a:hover, .project-img::before {
+  background: hsla(0, 0%, 0%, 0.5);
+}
+
+
+.project-item-icon-box {
+  --scale: 0.8;
+  background: var(--jet);
+  color: var(--orange-yellow-crayola);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(var(--scale));
+  font-size: 20px;
+  padding: 19px;
+  border-radius: 12px;
+  opacity: 0;
+  z-index: 1;
+  transition: var(--transition-1);
+}
+
+
+.project-item>a:hover .project-item-icon-box {
+  --scale: 1;
+  opacity: 1;
+}
+
+.project-item-icon-box ion-icon {
+  --ionicon-stroke-width: 50px;
+}
+
+.project-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: var(--transition-1);
+}
+
+
+.project-item>a:hover img {
+  transform: scale(1.1);
+}
+
+.project-title,
+.project-category {
+  margin-left: 10px;
+}
+
+.project-title {
+  color: var(--white-2);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-400);
+  text-transform: capitalize;
+  line-height: 1.3;
+}
+
+.project-category {
+  color: var(--light-gray-70);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-300);
+}
 
 /*-----------------------------------*\
   #BLOG
