--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1088,6 +1088,7 @@ main {
   gap: 20px;
 }
 
+
 .blog-post-item> a{
   position: relative;
   background: var(--border-gradient-onyx);
@@ -1106,9 +1107,18 @@ main {
   z-index: -1;
 }
 
+
+
 .blog-banner-box {
   width: 100%;
   height: 200px;
+  object-fit: cover;
+  transition: var(--transition-1);
+}
+
+.blog-banner-box img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   transition: var(--transition-1);
 }
@@ -1284,7 +1294,7 @@ textarea.form-input::-webkit-resizer  {
  * responsive larger than 450px screen
  */
 
-@media  (min-width: 450px) {
+@media  (min-width: 350px) {
 
   
   /**
@@ -1306,6 +1316,15 @@ textarea.form-input::-webkit-resizer  {
    .blog-banner-box {
     height: auto;
    }
+
+ 
+
+
+  .testimonials-item-title {
+  margin-top: 20px;
+    
+  }
+
 
 
 
@@ -1386,54 +1405,236 @@ textarea.form-input::-webkit-resizer  {
   /**
    * #SIDEBAR
    */
+.sidebar{
+  max-height: 180px;
+  margin-bottom: 30px;
+}
 
-  
+.sidebar.active {
+   max-height: 584px;
 
+}
 
-  /**
+.sidebar-info {
+  gap: 25px;
+}
+
+.avatar-box {
+  border-radius: 30px;
+}
+
+.avatar-box img{
+  width: 120px;
+}
+
+.info-content .name {
+  margin-bottom: 15px;
+}
+
+.info-content .title {
+  padding: 5px 18px;
+}
+
+.info_more-btn {
+  top: -30px;
+  right: -30px;
+  padding: 10px 15px;
+}
+
+.info_more-btn span {
+  display:block;
+  font-size: var(--fs-8);
+}
+
+.info_more-btn ion-icon {
+  display: none;
+}
+
+.separator {
+  margin: 32px 0;
+}
+
+.contacts-list {
+  gap: 20px;
+}
+
+.contact-info {
+  max-width: calc(100% - 64px);
+  width: calc(100% - 64px);
+}
+
+/**
    * #NAVBAR
    */
 
   
+.navbar {
+  border-radius: 20px 20px 0 0;
+}
 
+.navbar-list{
+  gap: 20px;
+}
 
+.navbar-link {
+  --fs-8:14px;
+}
 
   /**
    * #ABOUT
    */
-
+.about .article-title {
+  margin-bottom: 20px;
   
+}
+
+.about-text{
+  margin-bottom: 40px;
+}
 
   /* service */
+  .service-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 18px;
+    padding: 30px;
+  }
 
-  
+  .service {
+    margin-bottom: 0;
+    margin-top: 5px;
+  }
+
+  .service-content-box {
+    text-align: left;
+  }
+ 
 
   /* testimonials */
+  .testimonials-title {
+    margin-bottom: 25px;
+  }
 
-  
+  .testimonials-list {
+    gap: 30px;
+    margin: 0 -30px;
+    padding: 30px;
+    padding-bottom: 30px;
+  }
+
+  .content-card {
+    padding: 30px;
+    padding-top: 25px;
+  }
+
+  .testimonials-avatar-box {
+    transform: translate(30px, -30px);
+    border-radius: 20px;
+  }
+
+  .testimonials-avatar-box img {
+    width: 80px;
+  }
+
+  .testimonials-item-title {
+    margin-bottom: 10px;
+    margin-left: 95px;
+  }
+
+  .testimonials-text {
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+  }
+
+   
 
   /* testimonials modal */
 
-  
+  .modal-container {
+    padding: 20px;
+  }
 
+  .testimonials-modal {
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
+    gap: 25px;
+    padding: 30px;
+    border: 20px;
+  }
+
+  .modal-img-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .modal-avatar-box{
+    border-radius: 18px;
+    margin-bottom: 0;
+  }
+
+  .modal-avatar-box img{
+    width: 65px;
+  }
+
+  .modal-img-wrapper>img{
+    display: block;
+    flex-grow: 1;
+    width: 35px;
+  }
   
   /* clients */
+.clients-list {
+  gap: 50px;
+  margin: 0 -30px;
+  padding: 45px;
+  scroll-padding-inline: 45px;
+}
 
-
-
-
+.clients-item{
+  min-width: calc(33.33% - 35px);
+}
 
   /**
    * #RESUME
    */
+  .timeline-list {
+    margin-left: 65px;
+  }
 
+  .timeline-item:not(:last-child)::before{
+    left: -40px;
+  }
+
+  .timeline-item::after{
+    height: 8px;
+    width: 8px;
+    left: -43px;
+  }
+
+  .skills-item:not(:last-child){
+    margin-bottom: 25px;
+  }
   
-
-
 
   /**
    * #PORTFOLIO, BLOG
    */
+
+   .project-img,
+   .blog-banner-box {
+    border-radius: 16px;
+   }
+  
+   .blog-posts-list{
+    padding: 25px;
+   }
+
+   .blog-content{
+    padding: 25px;
+   }
 
 
 
@@ -1442,7 +1643,32 @@ textarea.form-input::-webkit-resizer  {
    * #CONTACT
    */
 
+   .mapbox {
+    height: 380px;
+    border-radius: 18px;
+   }
 
+   .input-wrapper {
+    gap: 30px;
+    margin-bottom: 30px;
+   }
+
+   .form-input {
+    padding: 15px 20px;
+   }
+
+   textarea.form-input{
+    margin-bottom: 30px;
+   }
+
+   .form-btn {
+    --fs-6: 16px;
+    padding: 16px 20px;
+   }
+
+   .form-btn ion-icon {
+    font-size: 10px;
+   }
 
 }
 
@@ -1470,6 +1696,10 @@ textarea.form-input::-webkit-resizer  {
    * SIDEBAR
    */
 
+   .contacts-list {
+    grid-template-columns: 1fr 1fr ;
+    gap: 30px 15px;
+   }
 
 
 
@@ -1477,7 +1707,9 @@ textarea.form-input::-webkit-resizer  {
   /**
    * NAVBAR
    */
-
+   .navbar-link {
+    --fs-8: 15px auto;
+   }
 
 
 
@@ -1487,16 +1719,54 @@ textarea.form-input::-webkit-resizer  {
    */
 
   /* testimonials modal */
+  .testimonials-modal {
+    gap: 35px;
+    max-width: 680px;
+  }
 
- 
+  .model-avatar-box img {
+    width: 80px;
+  }
 
-
-
-
+  
   /**
    * PORTFOLIO
    */
+  .article-title{
+    padding-bottom: 20px;
+  }
 
+  .filter-select {
+    display: none;
+  }
+
+  .filter-list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 25px;
+    padding-left: 5px;
+    margin-bottom: 30px;
+  }
+
+  .filter-item button {
+    color: var(--light-gray);
+    font-size: var(--fs-5);
+    transition: var(--transition-1);
+  }
+
+  .filter-item button:hover {
+    color: var(--light-gray-70);
+  }
+
+  .filter-item button.active {
+    color: var(--orange-yellow-crayola);
+  }
+
+  .project-list,
+  .blog-posts-list {
+    grid-template-columns: 1fr 1fr;
+  }
   
 
   /* portfolio and blog grid */
@@ -1508,6 +1778,14 @@ textarea.form-input::-webkit-resizer  {
    * CONTACT
    */
 
+   .input-wrapper{
+    grid-template-columns: 1fr 1fr;
+   }
+
+   .form-btn{
+    width: max-content;
+    margin-left: auto;
+   }
   
 }
 
@@ -1553,16 +1831,40 @@ textarea.form-input::-webkit-resizer  {
   /**
    * MAIN 
    */
+   main{
+    margin-bottom: 60px;
+   }
 
- 
-
-
+   .main-content {
+    position: relative;
+    width: relative;
+    width: max-content;
+    margin: auto;
+   }
 
   /**
    * NAVBAR
    */
+   .navbar {
+    position: absolute;
+    bottom: auto;
+    top: 0;
+    left: auto;
+    right: 0;
+    width: max-content;
+    border-radius:0, 20px ;
+    padding: 0 20px;
+    box-shadow: none;
+   }
 
-  
+   .navbar-list {
+    gap: 30px;
+    padding: 0 20px;
+   }
+
+   .navbar-link {
+    font-weight: var(--fw-500);
+   }
 
 
   /**
@@ -1570,6 +1872,15 @@ textarea.form-input::-webkit-resizer  {
    */
 
   /* service */
+  .service{
+    grid-template-columns: 1fr 1fr;
+    gap: 20px 25px;
+  }
+
+  .testimonials-item{
+    min-width: calc(50% - 15px);
+  }
+
 
  
 
@@ -1579,6 +1890,11 @@ textarea.form-input::-webkit-resizer  {
 
   /* clients */
 
+  .clients-item{
+    min-width: calc(25% - 38px);
+  }
+
+
 
 
 
@@ -1586,14 +1902,18 @@ textarea.form-input::-webkit-resizer  {
   /**
    * PORTFOLIO
    */
+   .project-list{
+    grid-template-columns: repeat(3, 1fr);
+   }
 
- 
-
-
+   
 
   /**
    * BLOG
    */
+   .blog-banner-box{
+    height: 230px;
+   }
 
 
 
@@ -1644,16 +1964,86 @@ textarea.form-input::-webkit-resizer  {
   /**
    * MAIN
    */
+  main{
+    max-width: 1200;
+    margin-inline: auto;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    gap: 25px;
+  }
 
+  .main-content{
+    min-height: 75%;
+    width: 75%;
+    margin: 0;
+  }
 
-
-
-
-
+  
   /**
    * SIDEBAR
    */
 
+   .sidebar {
+    position: sticky;
+    top: 60px;
+    max-height: max-content;
+    height: 100%;
+    margin-bottom: 0;
+    padding-top: 60px;
+    z-index: 1;
+   }
+
+   .sidebar-info{
+    flex-direction: column;
+   }
+
+   .avatar-box img {
+    width: 150px;
+   }
+
+   .info-content .name{
+    white-space: nowrap;
+    text-align: center;
+   }
+
+   .info-content .title {
+    margin: auto;
+   }
+
+   .info_more-btn {
+    display: none;
+   }
+
+   .sidebar-info_more {
+    opacity: 1;
+    visibility: visible;
+   }
+
+   .contacts-list {
+    grid-template-columns: 1fr;
+   }
+
+   .contact-info :is(.contact-link) {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+   }
+
+   .contact-info :is(.contacts-link, time, address){
+    --fs-7:14px;
+    font-weight: var(--fw-300);
+   }
+
+   .separator:last-of-type {
+    margin: 15px 0;
+    opacity: 0;
+   }
+
+   .social-list{
+    justify-content: flex-start;
+    color: var(--orange-yellow-crayola);
+   }
 
 
 
@@ -1661,5 +2051,8 @@ textarea.form-input::-webkit-resizer  {
 	 * RESUME
 	 */
 
+   .timeline-text {
+    max-width: 700px;
+   }
 
 }
