--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,7 +451,7 @@ main {
   background: hsla(240, 1%, 17%, 0.75);
   backdrop-filter: blur(10px);
   border: 1px solid var(--jet);
-  border-radius: 12px 12px 0 0;
+  border-radius: 12px 0 12px  0;
   box-shadow: var(--shadow-2);
   z-index: 5;
 }
@@ -1862,7 +1862,7 @@ textarea.form-input::-webkit-resizer  {
     left: auto;
     right: 0;
     width: max-content;
-    border-radius:0, 20px ;
+    border-radius:0 20px 0 20px ;
     padding: 0 20px;
     box-shadow: none;
    }
